--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,7 +28,7 @@
 
     <footer class = "footer">
         <div class = "container">
-            <p><a href="/api/friends">API Friends link</a> | <a href ="https://github.com/rutodeno/FriendFinder">GitHub Repo</a></p>
+            <p><a href="/api/friends">API Friends Link</a> | <a href ="https://github.com/rutodeno/FriendFinder">GitHub Repo</a></p>
         </div>
     </footer>
 
