--- a/app/public/home.html
+++ b/app/public/home.html
@@ -9,7 +9,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
 
 </head>
 
@@ -20,17 +20,26 @@
             <h1 class="text-center">Friend Finder</h1>
             <hr>
             <br>
-            <div class = "text-center">
-                <a href="/survey"><button class = "btn btn-lg btn-primary">Check your Compabibility !!</button> </a>
+            <div class="text-center">
+                <a href="/survey">
+                    <button class="btn btn-lg btn-primary">Check your Compabibility !!</button>
+                </a>
             </div>
         </div>
+
+        <footer class="footer">
+            <nav class="navbar navbar-default navbar-fixed-bottom">
+                <div class="container">
+                    <p>
+                        <a href="/api/friends">API Friends Link</a> |
+                        <a href="https://github.com/rutodeno/FriendFinder">GitHub Repo</a>
+                    </p>
+                </div>
+            </nav>
+        </footer>
+
     </div>
 
-    <footer class = "footer">
-        <div class = "container">
-            <p><a href="/api/friends">API Friends Link</a> | <a href ="https://github.com/rutodeno/FriendFinder">GitHub Repo</a></p>
-        </div>
-    </footer>
 
 
 
