added question to html files

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -15,35 +15,59 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div class="jumbotron">
-                    <h1 class="text-center">Friend Finder</h1>
-                    <hr>
-                    <br>
-                    <div class="text-center">
-                        <a href="/">
-                            <button class="btn btn-lg btn-primary">Home</button>
-                        </a>
+            <div class="panel panel-primary">
+                <div class = "panel-heading">
+
+                    <h3 class="panel-title"><strong>Survey Questions</strong></h3>
+                
+                </div>
+                <div class= "panel-body">
+                    <div class="col-md-12">
+                        <div class= "question1">
+                            <p>1. Do you sometimes find youself thinking of solving world prolems ?.</p>
+                            <select class="form-control">
+                                <option>Strongly Agree</option>
+                                <option>Agree</option>
+                                <option>Neutral</option>
+                                <option>Disagree</option>
+                                <option>Strongly Disagree</option>
+                            </select>
+                        </div>
+                        <br>
+                        <div class= "question2">
+                            <p>2. You like going out on trips, skiing.</p>
+                            <select class="form-control">
+                                <option>Strongly Agree</option>
+                                <option>Agree</option>
+                                <option>Neutral</option>
+                                <option>Disagree</option>
+                                <option>Strongly Disagree</option>
+                            </select>
+                        </div>
+                        <br>
+                        <div class= "question3">
+                            <p>4. Do you easily make new friends?</p>
+                            <select class="form-control">
+                                <option>Strongly Agree</option>
+                                <option>Agree</option>
+                                <option>Neutral</option>
+                                <option>Disagree</option>
+                                <option>Strongly Disagree</option>
+                            </select>
+                        </div>
+                        <br>
+                        <div class= "question3">
+                            <p>5. Would you describe yourself as being nerdy ?</p>
+                            <select class="form-control">
+                                <option>Strongly Agree</option>
+                                <option>Agree</option>
+                                <option>Neutral</option>
+                                <option>Disagree</option>
+                                <option>Strongly Disagree</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="col-md-12">
-                <label class="radio-inline ">
-                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">1
-                </label>
-                <label class="radio-inline ">
-                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">2
-                </label>
-                <label class="radio-inline ">
-                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">3
-                </label>
-                <label class="radio-inline ">
-                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">4
-                </label>
-                <label class="radio-inline ">
-                    <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">5
-                </label>
             </div>
         </div>
 
