--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -14,17 +14,18 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        <strong>Your details</strong>
-                    </h3>
-                </div>
+        <form>
 
-                <div class="panel-body">
-                    <div class="col-md-6">
-                        <form>
+            <div class="row">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            <strong>Your details</strong>
+                        </h3>
+                    </div>
+
+                    <div class="panel-body">
+                        <div class="col-md-6">
                             <div class="form-group">
                                 <label for="name">Name</label>
                                 <input type="name" class="form-control" id="name" placeholder="Enter your name">
@@ -33,83 +34,91 @@
                                 <label form="image">Image</label>
                                 <input type="link" class="form-control" id="image" placeholder="Attach a link to your photo">
                             </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-
-                    <h3 class="panel-title">
-                        <strong>Survey Questions</strong>
-                    </h3>
-
-                </div>
-                <div class="panel-body">
-                    <div class="col-md-6">
-                        <div class="question1">
-                            <p>1. Do you sometimes find youself thinking of solving world prolems ?.</p>
-                            <select class="form-control">
-                                <option>Strongly Agree</option>
-                                <option>Agree</option>
-                                <option>Neutral</option>
-                                <option>Disagree</option>
-                                <option>Strongly Disagree</option>
-                            </select>
-                        </div>
-                        <br>
-                        <div class="question2">
-                            <p>2. You like going out on trips, skiing.</p>
-                            <select class="form-control">
-                                <option>Strongly Agree</option>
-                                <option>Agree</option>
-                                <option>Neutral</option>
-                                <option>Disagree</option>
-                                <option>Strongly Disagree</option>
-                            </select>
-                        </div>
-                        <br>
-                        <div class="question3">
-                            <p>4. Do you easily make new friends?</p>
-                            <select class="form-control">
-                                <option>Strongly Agree</option>
-                                <option>Agree</option>
-                                <option>Neutral</option>
-                                <option>Disagree</option>
-                                <option>Strongly Disagree</option>
-                            </select>
-                        </div>
-                        <br>
-                        <div class="question3">
-                            <p>5. Would you describe yourself as being nerdy ?</p>
-                            <select class="form-control">
-                                <option>Strongly Agree</option>
-                                <option>Agree</option>
-                                <option>Neutral</option>
-                                <option>Disagree</option>
-                                <option>Strongly Disagree</option>
-                            </select>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <footer class="footer">
-            <nav class="navbar navbar-default ">
-                <div class="container">
-                    <p>
-                        <a href="/api/friends">API Friends Link</a> |
-                        <a href="https://github.com/rutodeno/FriendFinder">GitHub Repo</a>
-                    </p>
+
+            <div class="row">
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+
+                        <h3 class="panel-title">
+                            <strong>Survey Questions</strong>
+                        </h3>
+
+                    </div>
+                    <div class="panel-body">
+                        <div class="col-md-6">
+                            <div class="question1">
+                                <p>1. Do you sometimes find youself thinking of solving world prolems ?.</p>
+                                <select class="form-control">
+                                    <option>Strongly Agree</option>
+                                    <option>Agree</option>
+                                    <option>Neutral</option>
+                                    <option>Disagree</option>
+                                    <option>Strongly Disagree</option>
+                                </select>
+                            </div>
+                            <br>
+                            <div class="question2">
+                                <p>2. You like going out on trips, skiing.</p>
+                                <select class="form-control">
+                                    <option>Strongly Agree</option>
+                                    <option>Agree</option>
+                                    <option>Neutral</option>
+                                    <option>Disagree</option>
+                                    <option>Strongly Disagree</option>
+                                </select>
+                            </div>
+                            <br>
+                            <div class="question3">
+                                <p>4. Do you easily make new friends?</p>
+                                <select class="form-control">
+                                    <option>Strongly Agree</option>
+                                    <option>Agree</option>
+                                    <option>Neutral</option>
+                                    <option>Disagree</option>
+                                    <option>Strongly Disagree</option>
+                                </select>
+                            </div>
+                            <br>
+                            <div class="question3">
+                                <p>5. Would you describe yourself as being nerdy ?</p>
+                                <select class="form-control">
+                                    <option>Strongly Agree</option>
+                                    <option>Agree</option>
+                                    <option>Neutral</option>
+                                    <option>Disagree</option>
+                                    <option>Strongly Disagree</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </nav>
-        </footer>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+
+        </form>
     </div>
+
+    <br>
+    <footer class="footer">
+        <nav class="navbar navbar-default ">
+            <div class="container">
+                <p>
+                    <a href="/api/friends">API Friends Link</a> |
+                    <a href="https://github.com/rutodeno/FriendFinder">GitHub Repo</a>
+                </p>
+            </div>
+        </nav>
+    </footer>
 
 </body>
 
