--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -128,10 +128,11 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Modal Header</h4>
+                        <h4 class="modal-title">Your best Friend is: </h4>
                     </div>
                         <div class="modal-body">
-                        <p>Some text in the modal</p>
+                            <div id ="friendInfo"></div>
+                        <!-- <p>Some text in the modal</p> -->
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -155,7 +156,7 @@
         </nav>
     </footer>
 
-    <script src= "js/logic.js"></script>
+    <script src= "js/logic.js"></script> <!-- linking to out js file -->
     
 </body>
 
